--- a/ui/index.html
+++ b/ui/index.html
@@ -44,18 +44,6 @@
         </symbol>
     </svg>
     
-    <!-- Mini悬浮窗模式 -->
-    <div class="mini-window" id="miniWindow" style="display: none;">
-        <div class="mini-content" data-tauri-drag-region>
-            <svg class="mini-icon" width="40" height="40"><use href="#icon-folder"/></svg>
-            <div class="mini-text">
-                <div class="mini-label" id="miniRuleLabel">[*]</div>
-                <div class="mini-name" id="miniRuleName">所有规则</div>
-            </div>
-            <div class="mini-status" id="miniStatus">滚轮切换</div>
-        </div>
-    </div>
-
     <!-- 完整界面 -->
     <div class="app-container" id="appContainer">
         <!-- 顶部标题栏 -->
@@ -65,10 +53,10 @@
                 <h1>FloatSort <span style="font-size: 10px; color: #999;">v2.1</span></h1>
             </div>
             <div class="header-actions">
-                <button class="icon-btn" id="minimizeBtn" title="最小化为悬浮窗">
+                <button class="icon-btn" id="minimizeBtn" title="最小化到托盘">
                     <svg width="16" height="16"><use href="#icon-minimize"/></svg>
                 </button>
-                <button class="icon-btn close-btn" id="closeWindowBtn" title="关闭">
+                <button class="icon-btn close-btn" id="closeWindowBtn" title="退出程序">
                     <svg width="16" height="16"><use href="#icon-close"/></svg>
                 </button>
             </div>
@@ -84,7 +72,16 @@
                 <svg width="16" height="16"><use href="#icon-folder"/></svg>
                 <span>文件夹</span>
             </button>
-            <button class="tab-btn" data-tab="settings">
+            <button class="tab-btn tab-icon-only" data-tab="logs" title="日志">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                    <polyline points="14 2 14 8 20 8"/>
+                    <line x1="16" y1="13" x2="8" y2="13"/>
+                    <line x1="16" y1="17" x2="8" y2="17"/>
+                    <polyline points="10 9 9 9 8 9"/>
+                </svg>
+            </button>
+            <button class="tab-btn tab-icon-only" data-tab="settings" title="设置">
                 <svg width="16" height="16"><use href="#icon-settings"/></svg>
                 <span>设置</span>
             </button>
@@ -123,6 +120,27 @@
                         <svg class="empty-icon" width="48" height="48"><use href="#icon-folder"/></svg>
                         <p>暂无监控文件夹</p>
                         <p class="empty-hint">点击上方按钮添加文件夹开始监控</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- 日志 Tab -->
+            <section class="tab-pane" id="logs-pane">
+                <div class="pane-header">
+                    <h2>活动日志</h2>
+                    <div style="display: flex; gap: 8px;">
+                        <button class="btn-secondary" id="clearActivityBtn">
+                            🗑️ 清空日志
+                        </button>
+                        <button class="btn-secondary" id="clearProcessedBtn" title="清除已处理文件记录，允许重新整理之前处理过的文件">
+                            🔄 清除记录
+                        </button>
+                    </div>
+                </div>
+                <div class="activity-log" id="activityLog">
+                    <div class="activity-item">
+                        <span class="activity-time">启动</span>
+                        <span class="activity-message">FloatSort V2 已就绪</span>
                     </div>
                 </div>
             </section>
@@ -170,26 +188,6 @@
                         <div class="stat-card">
                             <div class="stat-value" id="rulesCount">0</div>
                             <div class="stat-label">活动规则</div>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="settings-section">
-                    <div class="pane-header" style="margin: 0;">
-                        <h3 style="margin: 0;">活动日志</h3>
-                        <div style="display: flex; gap: 8px;">
-                            <button class="btn-secondary" id="clearActivityBtn">
-                                🗑️ 清空日志
-                            </button>
-                            <button class="btn-secondary" id="clearProcessedBtn" title="清除已处理文件记录，允许重新整理之前处理过的文件">
-                                🔄 清除记录
-                            </button>
-                        </div>
-                    </div>
-                    <div class="activity-log" id="activityLog">
-                        <div class="activity-item">
-                            <span class="activity-time">启动</span>
-                            <span class="activity-message">FloatSort V2 已就绪</span>
                         </div>
                     </div>
                 </div>
