--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Expires" content="0">
     <title>FloatSort - V2</title>
     <link rel="stylesheet" href="styles_minimal.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <!-- SVG图标库 -->
@@ -408,7 +409,14 @@
                 <form id="ruleForm">
                     <div class="form-group">
                         <label for="ruleName">规则名称 <span class="required">*</span></label>
-                        <input type="text" id="ruleName" placeholder="例如：图片文件归类" required>
+                        <div class="rule-name-with-icon">
+                            <div class="rule-icon-selector" id="ruleIconSelector" title="点击选择图标，或按 Ctrl+V 粘贴 SVG">
+                                <i class="bi bi-file-earmark" id="ruleIconPreview" style="color: #667eea;"></i>
+                            </div>
+                            <input type="color" id="ruleColorPicker" value="#667eea" title="选择颜色">
+                            <input type="text" id="ruleName" placeholder="例如：图片文件归类" required>
+                        </div>
+                        <p class="hint">点击图标选择，或在图标上按 Ctrl+V 粘贴 SVG 代码</p>
                     </div>
                     
                     <div class="form-group">
@@ -573,6 +581,20 @@
         </div>
     </div>
 
+    <!-- 图标选择器模态框 -->
+    <div id="iconPickerModal" class="modal" style="display: none;">
+        <div class="modal-content" style="max-width: 600px;">
+            <div class="modal-header">
+                <h3>选择图标</h3>
+                <button class="btn-close" onclick="closeIconPicker()">✕</button>
+            </div>
+            <div class="modal-body">
+                <input type="text" id="iconSearchInput" placeholder="搜索图标..." class="icon-search-input">
+                <div class="icon-grid" id="iconGrid"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- 删除确认模态框 -->
     <div class="modal" id="deleteConfirmModal" style="display: none;">
         <div class="modal-content" style="max-width: 450px;">
@@ -623,6 +645,7 @@
     </div>
 
     <script src="rule_groups.js"></script>
+    <script src="rule_icons.js"></script>
     <script src="app_v2.js"></script>
 </body>
 </html>
