--- a/ui/index.html
+++ b/ui/index.html
@@ -165,12 +165,17 @@
             <section class="tab-pane" id="logs-pane">
                 <div class="pane-header">
                     <h2 id="activityLogTitle">活动日志</h2>
-                    <div style="display: flex; gap: 8px;">
+                    <div style="display: flex; gap: 8px; align-items: center;">
+                        <button class="btn-secondary" id="prevDayBtn" title="上一天">◀</button>
+                        <input type="date" id="logDatePicker" style="padding: 8px 12px; border: 1px solid #d1d5db; border-radius: 4px; font-size: 13px; cursor: pointer; height: 37px;" />
+                        <button class="btn-secondary" id="nextDayBtn" title="下一天">▶</button>
+                        <button class="btn-secondary" id="todayBtn" title="返回今天"><span id="todayBtnText">今天</span></button>
+                        <div style="width: 1px; height: 20px; background: #e0e0e0; margin: 0 4px;"></div>
                         <button class="btn-secondary" id="clearActivityBtn">
-                            <span id="clearActivityBtnText">🗑️ 清空日志</span>
+                            <span id="clearActivityBtnText">清空日志</span>
                         </button>
-                        <button class="btn-secondary" id="clearProcessedBtn" title="清除已处理文件记录，允许重新整理之前处理过的文件">
-                            <span id="clearProcessedBtnText">🔄 清除记录</span>
+                        <button class="btn-secondary" id="openLogFolderBtn" title="打开日志文件夹">
+                            <span id="openLogFolderBtnText">打开日志</span>
                         </button>
                     </div>
                 </div>
@@ -207,12 +212,12 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="settings-section">
-                    <h3 id="animationSettingsTitle">窗口动画</h3>
-                    <div class="setting-item-inline">
+                    <h3 title="选择窗口打开/关闭时的动画效果和速度">窗口动画</h3>
+                    <div class="setting-item-inline" style="gap: 24px;">
                         <div class="setting-group">
-                            <label class="setting-label" for="animationSelect" id="animationLabel">动画效果</label>
+                            <label class="setting-label" for="animationSelect" id="animationLabel" title="选择窗口打开/关闭时的动画效果">动画效果</label>
                             <select id="animationSelect" class="setting-select">
                                 <option value="none">无动画</option>
                                 <option value="fade">淡入淡出</option>
@@ -220,7 +225,7 @@
                             </select>
                         </div>
                         <div class="setting-group">
-                            <label class="setting-label" for="animationSpeedSelect" id="animationSpeedLabel">动画速度</label>
+                            <label class="setting-label" for="animationSpeedSelect" id="animationSpeedLabel" title="控制动画播放的速度">动画速度</label>
                             <select id="animationSpeedSelect" class="setting-select">
                                 <option value="fast">快速</option>
                                 <option value="normal">正常</option>
@@ -231,11 +236,10 @@
                 </div>
 
                 <div class="settings-section">
-                    <h3 id="stabilitySettingsTitle">文件稳定性检查</h3>
-                    <p class="setting-description" id="stabilityDescription">防止正在编辑的文件被意外移动，确保文件完全写入完成后再处理</p>
-                    <div class="setting-item-inline">
+                    <h3 id="stabilitySettingsTitle" title="防止正在编辑的文件被意外移动，确保文件完全写入完成后再处理">文件稳定性检查</h3>
+                    <div class="setting-item-inline" style="gap: 24px;">
                         <div class="setting-group">
-                            <label class="setting-label" for="stabilityDelaySelect" id="stabilityDelayLabel">初始延迟</label>
+                            <label class="setting-label" for="stabilityDelaySelect" id="stabilityDelayLabel" title="检测到文件后等待的初始延迟时间">初始延迟</label>
                             <select id="stabilityDelaySelect" class="setting-select">
                                 <option value="1">1秒</option>
                                 <option value="2">2秒</option>
@@ -245,7 +249,7 @@
                             </select>
                         </div>
                         <div class="setting-group">
-                            <label class="setting-label" for="stabilityChecksSelect" id="stabilityChecksLabel">稳定检查次数</label>
+                            <label class="setting-label" for="stabilityChecksSelect" id="stabilityChecksLabel" title="每隔1秒检查文件大小和修改时间是否不变，连续稳定指定次数后才处理">稳定检查次数</label>
                             <select id="stabilityChecksSelect" class="setting-select">
                                 <option value="1">1次</option>
                                 <option value="2">2次（推荐）</option>
@@ -254,13 +258,29 @@
                             </select>
                         </div>
                     </div>
-                    <p class="hint" id="stabilityHint">检测到文件后，等待初始延迟时间，然后每隔1秒检查文件是否稳定（大小和修改时间不变），连续稳定指定次数后才处理</p>
                 </div>
 
                 <div class="settings-section">
-                    <h3 id="configManagementTitle">配置管理</h3>
+                    <h3 id="logManagementTitle" title="日志文件按天自动创建，可设置保留天数自动清理过期日志">日志管理</h3>
+                    <div class="setting-item-inline">
+                        <div class="setting-group">
+                            <label class="setting-label" for="logRetentionDaysSelect" id="logRetentionDaysLabel" title="每天自动创建一个日志文件，过期日志将在应用启动时自动清理">日志保留天数</label>
+                            <select id="logRetentionDaysSelect" class="setting-select">
+                                <option value="7">7天</option>
+                                <option value="15">15天</option>
+                                <option value="30">30天（推荐）</option>
+                                <option value="60">60天</option>
+                                <option value="90">90天</option>
+                                <option value="-1">永久保留</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="settings-section">
+                    <h3 id="configManagementTitle" title="导出配置可以备份您的规则、文件夹等设置；导入配置会覆盖当前设置">配置管理</h3>
                     <div class="config-actions">
-                        <button class="btn-config" id="exportConfigBtn">
+                        <button class="btn-config" id="exportConfigBtn" title="导出当前所有规则、文件夹配置到文件">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                                 <polyline points="7 10 12 15 17 10"></polyline>
@@ -268,7 +288,7 @@
                             </svg>
                             <span id="exportConfigText">导出配置</span>
                         </button>
-                        <button class="btn-config" id="importConfigBtn">
+                        <button class="btn-config" id="importConfigBtn" title="从文件导入配置，会覆盖当前设置">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                                 <polyline points="17 8 12 3 7 8"></polyline>
@@ -277,7 +297,6 @@
                             <span id="importConfigText">导入配置</span>
                         </button>
                     </div>
-                    <p class="hint" id="configManagementHint">导出配置可以备份您的规则、文件夹等设置；导入配置会覆盖当前设置</p>
                 </div>
                 
                 <div class="settings-section">
